# humans-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.html
example/: example.py
src/HUMANS/: __init__.py  evaluator.py  message.py  whisper.py
src/HUMANS/cava/: functions.json  metric.py
src/HUMANS/dynamic_superb/: metric.py
src/HUMANS/speakbench/: metric.py
src/HUMANS/ultraeval/: metric.py
src/HUMANS/wildspeech/: metric.py
